--- a/app-office/mozilla-sunbird/ChangeLog
+++ b/app-office/mozilla-sunbird/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for app-office/mozilla-sunbird
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-office/mozilla-sunbird/ChangeLog,v 1.34 2008/07/18 11:56:20 aballier Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-office/mozilla-sunbird/ChangeLog,v 1.35 2008/08/03 10:57:41 ulm Exp $
+
+  03 Aug 2008; Ulrich Mueller <ulm@gentoo.org> metadata.xml:
+  Add USE flag description to metadata wrt GLEP 56.
 
   18 Jul 2008; Alexis Ballier <aballier@gentoo.org>
   mozilla-sunbird-0.8.ebuild:
