--- a/app-office/rabbit/ChangeLog
+++ b/app-office/rabbit/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for app-office/rabbit
-# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-office/rabbit/ChangeLog,v 1.3 2007/07/23 16:32:15 graaff Exp $
+# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/app-office/rabbit/ChangeLog,v 1.4 2008/08/03 12:10:47 ulm Exp $
+
+  03 Aug 2008; Ulrich Mueller <ulm@gentoo.org> metadata.xml:
+  Add USE flag description to metadata wrt GLEP 56.
 
 *rabbit-0.5.2 (23 Jul 2007)
 
